fix: tall image clipping in read alongs

--- a/packages/web-component/src/scss/_shame.scss
+++ b/packages/web-component/src/scss/_shame.scss
@@ -58,7 +58,7 @@ p {
 }
 
 #img-remover {
-  margin: 60px;
+  margin: 0;
   position: absolute;
   z-index: functions.z("nav");
   border-radius: 50px;
